[package]
name = "minimum-sns-post-app2-front"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Event", "EventTarget"] }
gloo-net = { version = "0.5", features = ["http"] }
uuid = { version = "1.6", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib"]

